--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,10 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "express-rate-limit": "^8.2.1",
     "mongoose": "^9.1.5",
+    "morgan": "^1.10.1",
+    "node-cache": "^5.1.2",
     "nodemon": "^3.1.11"
   }
 }
